# phtheirichthys

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
src/: lib.rs  main.rs  phtheirichthys.rs  position.rs  utils2.rs  wasm_binding.rs
src/algorithm/: cubecl_spherical.rs  mod.rs  spherical.rs
src/land/: config.rs  mod.rs  vr.rs
src/polar/: mod.rs
src/race/: mod.rs
src/router/: echeneis.rs  mod.rs
src/utils/: mod.rs
src/wind/: mod.rs  stamp.rs
src/wind/providers/: mod.rs  vr.rs
src/wind/providers/storage/: mod.rs  web_sys.rs
src/wind/providers_old/: config.rs  mod.rs  noaa.rs
src/wind/providers_old/storage/: mod.rs  web_sys.rs
src/wind/tests/: mod.rs
